调试删除派生指标接口